--- a/El_Passion_Dev_Assignment/Base.lproj/Main.storyboard
+++ b/El_Passion_Dev_Assignment/Base.lproj/Main.storyboard
@@ -18,16 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Gih-7F-c41">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gih-7F-c41" id="aYr-PG-psW">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="gbR-FX-jEO" id="JhO-HS-9Qb"/>
                             <outlet property="delegate" destination="gbR-FX-jEO" id="WFp-3C-1tz"/>
@@ -101,7 +91,7 @@
         <scene sceneID="Q1q-gD-d2f">
             <objects>
                 <navigationController id="YKz-HB-wIr" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="9YH-R3-kQa">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9YH-R3-kQa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
